# neon-serde-4

./: Cargo.toml  LICENSE.txt  readme.md
src/: de.rs  errors.rs  lib.rs  ser.rs
test/native/src/: lib.rs
