[package]
name = "neon-serde3"
version = "1.0.0"
authors = [
    "Husaria Solutions <contact@husariasolutions.com>",
    "Damir Jelić <poljar@termina.org.uk>",
    "Gabriel Castro <dev@GabrielCastro.ca>"
]
description = "Easily serialize object for use with neon, fork of neon-serde2"
license = "MIT"
repository = "https://github.com/HusariaSolutions/neon-serde-3"
readme = "README.md"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["default-panic-hook", "napi-6", "try-catch-api", "event-queue-api"]

[dependencies.num]
version = "0.4.0"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
