[package]
name = "neon-serde4"
version = "1.0.0"
description = "Easily serialize object for use with neon, fork of neon-serde3"
license = "MIT"
repository = "https://github.com/flo-martin/neon-serde-4"
readme = "README.md"

[dependencies.neon]
version = "1"
default-features = true

[dependencies.num]
version = "0.4.0"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
